Regression: Incorrect icon displaying of Weighted Normal modifier in the outliner #102993

Closed
opened 2022-12-07 20:14:21 +01:00 by Bogdan · 7 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash: b292cfe5a9

Short description of error
Weighted Normal modifier has an incorrect icon displaying in the outliner(actually, seems like it has the same icon as: Vertex Weight Edit, Vertex Weight Mix and Vertex Weight Proximity)

Exact steps for others to reproduce the error
Create object -> Add Weighted Normal Modifier -> Check it's out in the outliner.

Screenshot_1.png

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.3.1, branch: master, commit date: 2022-10-04 18:35, hash: `b292cfe5a9` **Short description of error** `Weighted Normal` modifier has an **incorrect** icon displaying in the `outliner`(actually, seems like it has the same icon as: Vertex Weight Edit, Vertex Weight Mix and Vertex Weight Proximity) **Exact steps for others to reproduce the error** Create object -> Add `Weighted Normal` Modifier -> Check it's out in the outliner. ![Screenshot_1.png](https://archive.blender.org/developer/F14019596/Screenshot_1.png)

Added subscriber: @Bogdan-Rak

Added subscriber: @Bogdan-Rak

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade self-assigned this 2022-12-31 07:57:32 +01:00
Pratik Borhade changed title from Incorrect icon displaying of Weighted Normal modifier in the outliner to Regression: Incorrect icon displaying of Weighted Normal modifier in the outliner 2022-12-31 07:57:49 +01:00

This issue was referenced by cdc10a9283

This issue was referenced by cdc10a9283677e3804a67247da8578fcc2722ae0

This issue was referenced by 849c76a10b

This issue was referenced by 849c76a10b2e6a3f5160ec27c2368e18982f5bba

This issue was referenced by e438e8e04e

This issue was referenced by e438e8e04ee83c194c4be9dea8560c53b3aee429

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102993
There is no content yet.