Fix T102993: Incorrect icon displaying of Weighted Normal modifier in the outliner

Mistake in {rBd15e8bdaa3343cf97a74f918b2570e66fb7abfa0}

Reviewed by: JacquesLucke

Differential Revision: https://developer.blender.org/D16890